# c_py_extension_playground

./: .gitignore  CMakeLists.txt  README.md  hello_full_program.c  setup.cfg  setup.py
src/cplay/: build.sh  greet.c  hello.c  hello_full_program.c  secretkeeper.c  test
